Updated index pages.

--- a/WorkSans/index.html
+++ b/WorkSans/index.html
@@ -1,5 +1,7 @@
 <html>
 	<head>
+		<meta charset="utf-8">
+		<title>Work Sans - Fonts - Assets - CDN</title>
 		<link rel="stylesheet" href="https://cdn.ceusmedia.de//css/bootstrap/4.4.1/bootstrap.min.css"></link>
 		<link rel="stylesheet" href="work-sans.css"></link>
 		<script src="https://cdn.ceusmedia.de/js/jquery/1.10.2.min.js"></script>
@@ -17,8 +19,8 @@ jQuery(document).ready(function(){
 	jQuery("button.set-font-attr").on("click", setFontAttribute);
 	jQuery("button.set-font-style").on("click", setFontStyle);
 })
-		
-		
+
+
 		</script>
 		<style>
 body {
@@ -39,8 +41,9 @@ body {
 #text-container div.showcase {
 	margin-bottom: 1em;
 	line-height: 1.3em;
+	padding: 5px 10px;
 	}
-		
+
 		</style>
 	</head>
 	<body>
@@ -65,17 +68,17 @@ body {
 				<div class="span9 col-md-9">
 					<h4>Sizes: 1em, 1.5em and 2em</h4>
 					<div id="text-container">
-						<div class="showcase" style="font-size: 1em">
+						<div contenteditable spellcheck="false" class="showcase" style="font-size: 1em">
 							ABCDEFGHIJKLMNOPQRSTUVWXYZ<br/>
 							abcdefghijklmnopqrstuvwxyz<br/>
 							1234567890 °!"§$%&/()=?;:_,.-,+#*'\~’<br/>
 						</div>
-						<div class="showcase" style="font-size: 1.5em">
+						<div contenteditable spellcheck="false" class="showcase" style="font-size: 1.5em">
 							ABCDEFGHIJKLMNOPQRSTUVWXYZ<br/>
 							abcdefghijklmnopqrstuvwxyz<br/>
 							1234567890 °!"§$%&/()=?;:_,.-,+#*'\~’<br/>
 						</div>
-						<div class="showcase" style="font-size: 2em">
+						<div contenteditable spellcheck="false" class="showcase" style="font-size: 2em">
 							ABCDEFGHIJKLMNOPQRSTUVWXYZ<br/>
 							abcdefghijklmnopqrstuvwxyz<br/>
 							1234567890 °!"§$%&/()=?;:_,.-,+#*'\~’<br/>
