--- a/NunitoSans/index.html
+++ b/NunitoSans/index.html
@@ -1,5 +1,7 @@
 <html>
 	<head>
+		<meta charset="utf-8">
+		<title>Nunito Sans - Fonts - Assets - CDN</title>
 		<link rel="stylesheet" href="https://cdn.ceusmedia.de//css/bootstrap.min.css"></link>
 		<link rel="stylesheet" href="nunitosans.css"></link>
 		<script src="https://cdn.ceusmedia.de/js/jquery/1.10.2.min.js"></script>
@@ -17,19 +19,20 @@ jQuery(document).ready(function(){
 	jQuery("button.set-font-attr").on("click", setFontAttribute);
 	jQuery("button.set-font-style").on("click", setFontStyle);
 })
-		
-		
+
+
 		</script>
 		<style>
 #text-container {
 	font-family: "Nunito Sans";
 	padding: 1em 1.5em;
 	}
-#text-container > div {
+#text-container div.showcase {
 	margin-bottom: 1em;
 	line-height: 1.3em;
+	padding: 5px 10px;
 	}
-		
+
 		</style>
 	</head>
 	<body>
@@ -40,7 +43,7 @@ jQuery(document).ready(function(){
 					<h4>Weight</h4>
 					<button type="button" class="btn set-font-attr" data-attr="weight" data-value="200">Extralight <small class="muted">(200)</small></button>
 					<button type="button" class="btn set-font-attr" data-attr="weight" data-value="300">Light <small class="muted">(300)</small></button>
-					<button type="button" class="btn set-font-attr" data-attr="weight" data-value="400">Regular <small class="muted">(400)</small></button>
+					<button type="button" class="btn set-font-attr active" data-attr="weight" data-value="400">Regular <small class="muted">(400)</small></button>
 					<button type="button" class="btn set-font-attr" data-attr="weight" data-value="600">Semibold <small class="muted">(600)</small></button>
 					<button type="button" class="btn set-font-attr" data-attr="weight" data-value="700">Bold <small class="muted">(700)</small></button>
 					<button type="button" class="btn set-font-attr" data-attr="weight" data-value="800">Extrabold <small class="muted">(800)</small></button>
@@ -49,24 +52,24 @@ jQuery(document).ready(function(){
 			<div class="row-fluid">
 				<div class="span12">
 					<h4>Style</h4>
-					<button type="button" class="btn set-font-attr" data-attr="style" data-value="normal">Normal</button>
+					<button type="button" class="btn set-font-attr active" data-attr="style" data-value="normal">Normal</button>
 					<button type="button" class="btn set-font-attr" data-attr="style" data-value="italic">Italic</button>
 				</div>
 			</div>
 			<hr/>
 			<div class="row-fluid">
 				<div class="span12" id="text-container">
-					<div style="font-size: 1em">
+					<div contenteditable spellcheck="false" class="showcase" style="font-size: 1em">
 						ABCDEFGHIJKLMNOPQRSTUVWXYZ<br/>
 						abcdefghijklmnopqrstuvwxyz<br/>
 						1234567890 °!"§$%&/()=?;:_,.-,+#*'\~’<br/>
 					</div>
-					<div style="font-size: 1.5em">
+					<div contenteditable spellcheck="false" class="showcase" style="font-size: 1.5em">
 						ABCDEFGHIJKLMNOPQRSTUVWXYZ<br/>
 						abcdefghijklmnopqrstuvwxyz<br/>
 						1234567890 °!"§$%&/()=?;:_,.-,+#*'\~’<br/>
 					</div>
-					<div style="font-size: 2em">
+					<div contenteditable spellcheck="false" class="showcase" style="font-size: 2em">
 						ABCDEFGHIJKLMNOPQRSTUVWXYZ<br/>
 						abcdefghijklmnopqrstuvwxyz<br/>
 						1234567890 °!"§$%&/()=?;:_,.-,+#*'\~’<br/>
