--- a/Ubuntu/index.html
+++ b/Ubuntu/index.html
@@ -1,5 +1,7 @@
 <html>
 	<head>
+		<meta charset="utf-8">
+		<title>Ubuntu - Fonts - Assets - CDN</title>
 		<link rel="stylesheet" href="https://cdn.ceusmedia.de//css/bootstrap.min.css"></link>
 		<link rel="stylesheet" href="ubuntu.css"></link>
 		<script src="https://cdn.ceusmedia.de/js/jquery/1.10.2.min.js"></script>
@@ -17,8 +19,8 @@ jQuery(document).ready(function(){
 	jQuery("button.set-font-attr").on("click", setFontAttribute);
 	jQuery("button.set-font-style").on("click", setFontStyle);
 })
-		
-		
+
+
 		</script>
 		<style>
 #text-container {
@@ -28,8 +30,9 @@ jQuery(document).ready(function(){
 #text-container div.showcase {
 	margin-bottom: 1em;
 	line-height: 1.3em;
+	padding: 5px 10px;
 	}
-		
+
 		</style>
 	</head>
 	<body>
@@ -39,7 +42,7 @@ jQuery(document).ready(function(){
 				<div class="span12">
 					<h4>Weight</h4>
 					<button type="button" class="btn set-font-attr" data-attr="weight" data-value="300">Light <small class="muted">(300)</small></button>
-					<button type="button" class="btn set-font-attr" data-attr="weight" data-value="400">Regular <small class="muted">(400)</small></button>
+					<button type="button" class="btn set-font-attr active" data-attr="weight" data-value="400">Regular <small class="muted">(400)</small></button>
 					<button type="button" class="btn set-font-attr" data-attr="weight" data-value="500">Semibold <small class="muted">(500)</small></button>
 					<button type="button" class="btn set-font-attr" data-attr="weight" data-value="700">Bold <small class="muted">(700)</small></button>
 				</div>
@@ -47,24 +50,24 @@ jQuery(document).ready(function(){
 			<div class="row-fluid">
 				<div class="span12">
 					<h4>Style</h4>
-					<button type="button" class="btn set-font-attr" data-attr="style" data-value="normal">Normal</button>
+					<button type="button" class="btn set-font-attr active" data-attr="style" data-value="normal">Normal</button>
 					<button type="button" class="btn set-font-attr" data-attr="style" data-value="italic">Italic</button>
 				</div>
 			</div>
 			<hr/>
 			<div class="row-fluid" id="text-container">
 				<div class="span12">
-					<div class="showcase" style="font-size: 1em">
+					<div contenteditable spellcheck="false" class="showcase" style="font-size: 1em">
 						ABCDEFGHIJKLMNOPQRSTUVWXYZ<br/>
 						abcdefghijklmnopqrstuvwxyz<br/>
 						1234567890 °!"§$%&/()=?;:_,.-,+#*'\~’<br/>
 					</div>
-					<div class="showcase" style="font-size: 1.5em">
+					<div contenteditable spellcheck="false" class="showcase" style="font-size: 1.5em">
 						ABCDEFGHIJKLMNOPQRSTUVWXYZ<br/>
 						abcdefghijklmnopqrstuvwxyz<br/>
 						1234567890 °!"§$%&/()=?;:_,.-,+#*'\~’<br/>
 					</div>
-					<div class="showcase" style="font-size: 2em">
+					<div contenteditable spellcheck="false" class="showcase" style="font-size: 2em">
 						ABCDEFGHIJKLMNOPQRSTUVWXYZ<br/>
 						abcdefghijklmnopqrstuvwxyz<br/>
 						1234567890 °!"§$%&/()=?;:_,.-,+#*'\~’<br/>
@@ -72,17 +75,17 @@ jQuery(document).ready(function(){
 
 					<h4>Mono</h4>
 					<div style="font-family: Ubuntu Mono">
-						<div class="showcase" style="font-size: 1em">
+						<div contenteditable spellcheck="false" class="showcase" style="font-size: 1em">
 							ABCDEFGHIJKLMNOPQRSTUVWXYZ<br/>
 							abcdefghijklmnopqrstuvwxyz<br/>
 							1234567890 °!"§$%&/()=?;:_,.-,+#*'\~’<br/>
 						</div>
-						<div class="showcase" style="font-size: 1.5em">
+						<div contenteditable spellcheck="false" class="showcase" style="font-size: 1.5em">
 							ABCDEFGHIJKLMNOPQRSTUVWXYZ<br/>
 							abcdefghijklmnopqrstuvwxyz<br/>
 							1234567890 °!"§$%&/()=?;:_,.-,+#*'\~’<br/>
 						</div>
-						<div class="showcase" style="font-size: 2em">
+						<div contenteditable spellcheck="false" class="showcase" style="font-size: 2em">
 							ABCDEFGHIJKLMNOPQRSTUVWXYZ<br/>
 							abcdefghijklmnopqrstuvwxyz<br/>
 							1234567890 °!"§$%&/()=?;:_,.-,+#*'\~’<br/>
